--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: ucar-intern-pdws
 channels:
  - conda-forge
 dependencies:
- - python==3.10
+ - python
  - cartopy
  - jupyterlab
  - matplotlib
@@ -12,6 +12,6 @@ dependencies:
  - pandas<2
  - pint
  - scipy
- - siphon
+ - siphon=0.9
  - xarray
  
